notes-k8s/3-rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
  namespace: notes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3.12-management
        ports:
        - containerPort: 5672   # queue
        - containerPort: 15672  # UI
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: notes
spec:
  selector:
    app: rabbitmq
  ports:
    - protocol: TCP
      port: 5672
