notes-k8s/5-notes.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-db-deployment
  namespace: notes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notes-db
  template:
    metadata:
      labels:
        app: notes-db
    spec:
      containers:
      - name: notes
        image: mongo
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: notes-db
  namespace: notes
spec:
  selector:
    app: notes-db
  ports:
    - protocol: TCP
      port: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-deployment
  namespace: notes
spec:
  replicas: 3 # was 1
  selector:
    matchLabels:
      app: notes
  template:
    metadata:
      labels:
        app: notes
    spec:
      containers:
      - name: notes
        image: andrewfedak/notes-app:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: logs-volume
          mountPath: /app/logs
      volumes:
      - name: logs-volume
        persistentVolumeClaim:
          claimName: notes-logs-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: notes
  namespace: notes
spec:
  selector:
    app: notes
  ports:
    - protocol: TCP
      port: 80
