notes-k8s/5-users.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-db-deployment
  namespace: notes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-db
  template:
    metadata:
      labels:
        app: users-db
    spec:
      containers:
      - name: users
        image: mongo
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: users-db
  namespace: notes
spec:
  selector:
    app: users-db
  ports:
    - protocol: TCP
      port: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-deployment
  namespace: notes
spec:
  replicas: 3 # was 1
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
      - name: users
        image: andrewfedak/users-app:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: users
  namespace: notes
spec:
  selector:
    app: users
  ports:
    - protocol: TCP
      port: 80
